<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.MoviesFragment">

   <ScrollView
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:scrollbars="none">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:orientation="vertical">

           <FrameLayout
               android:id="@+id/layout_top_rated_bolly"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:paddingBottom="8dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:paddingTop="4dp"
               android:visibility="gone">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left"
                   android:text="@string/top_rated_bolly"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/text_view_view_all_top_rated_bolly"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|right"
                   android:clickable="true"
                   android:text="@string/view_all"
                   android:textColor="@color/colorPrimary"
                   android:textSize="14sp" />

           </FrameLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recycler_view_top_rated_bolly"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:nestedScrollingEnabled="false"
               android:visibility="gone" />

           <FrameLayout
               android:id="@+id/layout_now_showing_bolly"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:paddingBottom="8dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:paddingTop="12dp"
               android:visibility="gone">

           <TextView
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="left"
               android:text="@string/now_showing_bolly"
               android:textColor="@android:color/black"
               android:textSize="18sp" />

           <TextView
               android:id="@+id/text_view_view_all_now_showing_bolly"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:layout_gravity="bottom|right"
               android:clickable="true"
               android:text="@string/view_all"
               android:textColor="@color/colorPrimary"
               android:textSize="14sp" />

           </FrameLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recycler_view_now_showing_bolly"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:nestedScrollingEnabled="false"
               android:visibility="gone" />


           <FrameLayout
               android:id="@+id/layout_top_rated_hollywood"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:paddingBottom="8dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:paddingTop="8dp"
               android:visibility="gone">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left"
                   android:text="@string/top_rated_holly"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/text_view_view_all_top_rated_hollywood"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|right"
                   android:clickable="true"
                   android:text="@string/view_all"
                   android:textColor="@color/colorPrimary"
                   android:textSize="14sp" />

           </FrameLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recycler_view_top_rated_hollywood"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:nestedScrollingEnabled="false"
               android:visibility="gone" />

           <FrameLayout
               android:id="@+id/layout_now_showing_hollywood"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:paddingBottom="8dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:paddingTop="12dp"
               android:visibility="gone">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left"
                   android:text="@string/now_showing_holly"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/text_view_view_all_now_showing_hollywood"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|right"
                   android:clickable="true"
                   android:text="@string/view_all"
                   android:textColor="@color/colorPrimary"
                   android:textSize="14sp" />

           </FrameLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recycler_view_now_showing_hollywood"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:nestedScrollingEnabled="false"
               android:visibility="gone" />

           <FrameLayout
               android:id="@+id/layout_popular"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:paddingBottom="8dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:paddingTop="8dp"
               android:visibility="gone">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left"
                   android:text="@string/popular"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/text_view_view_all_popular"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|right"
                   android:clickable="true"
                   android:text="@string/view_all"
                   android:textColor="@color/colorPrimary"
                   android:textSize="14sp" />

           </FrameLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recycler_view_popular"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:nestedScrollingEnabled="false"
               android:visibility="gone" />


           <FrameLayout
               android:id="@+id/layout_upcoming"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:layout_marginTop="8dp"
               android:paddingBottom="8dp"
               android:paddingLeft="16dp"
               android:paddingRight="16dp"
               android:paddingTop="8dp"
               android:visibility="gone">

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="left"
                   android:text="@string/upcoming"
                   android:textColor="@android:color/black"
                   android:textSize="18sp" />

               <TextView
                   android:id="@+id/text_view_view_all_upcoming"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:layout_gravity="bottom|right"
                   android:clickable="true"
                   android:text="@string/view_all"
                   android:textColor="@color/colorPrimary"
                   android:textSize="14sp" />

           </FrameLayout>

           <androidx.recyclerview.widget.RecyclerView
               android:id="@+id/recycler_view_upcoming"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:nestedScrollingEnabled="false"
               android:visibility="gone"/>


       </LinearLayout>

   </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>